grammar updates, indentation, small fixes

--- a/Editor/src/hu/racz/zalan/editor/Bundle.properties
+++ b/Editor/src/hu/racz/zalan/editor/Bundle.properties
@@ -1,6 +1,7 @@
 OpenIDE-Module-Name=Editor
 text/x-glsl=GLSL
 default=Default
+whitespace=Whitespace
 keyword=Keyword
 error=Error
 number=Number
@@ -9,5 +10,9 @@ character=Character
 comment=Comment
 identifier=Identifier
 type=Type
-builtin=Built-in function
+builtin_macro=Built-in macro
+builtin_variable=Built-in variable
+builtin_function=Built-in function
 macro=Macro
+qualifier=Qualifier
+qualifier_parameter=Qualifier parameter
