removed lexer modes from the grammar, token group simplifications

--- a/Editor/src/hu/racz/zalan/editor/Bundle.properties
+++ b/Editor/src/hu/racz/zalan/editor/Bundle.properties
@@ -1,4 +1,7 @@
-OpenIDE-Module-Name=Editor
+OpenIDE-Module-Name=GLSL Editor
+OpenIDE-Module-Short-Description=GLSL Editor plugin for Netbeans.
+OpenIDE-Module-Long-Description=GLSL Editor plugin for Netbeans. Features: syntax highlighting, error displaying, brace matching, indentation
+OpenIDE-Module-Display-Category=OpenGL
 text/x-glsl=GLSL
 default=Default
 whitespace=Whitespace
@@ -10,9 +13,5 @@ character=Character
 comment=Comment
 identifier=Identifier
 type=Type
-builtin_macro=Built-in macro
-builtin_variable=Built-in variable
-builtin_function=Built-in function
 macro=Macro
 qualifier=Qualifier
-qualifier_parameter=Qualifier parameter
