scope bővítése, refaktorálás, beépített függvények/típusok/változók/kulcsszavak betöltése xml-ből

--- a/Editor/src/hu/racz/zalan/editor/Bundle.properties
+++ b/Editor/src/hu/racz/zalan/editor/Bundle.properties
@@ -1,6 +1,8 @@
 OpenIDE-Module-Name=GLSL Editor
 OpenIDE-Module-Short-Description=GLSL Editor plugin for Netbeans.
-OpenIDE-Module-Long-Description=GLSL Editor plugin for Netbeans. Features: syntax highlighting, error displaying, brace matching, indentation
+OpenIDE-Module-Long-Description=\
+    GLSL Editor plugin for Netbeans. \
+    Features: syntax highlighting, error displaying, code completion, brace matching, indentation, formatting, go to definition, marking occurrences, adding new file.
 OpenIDE-Module-Display-Category=OpenGL
 text/x-glsl=GLSL
 default=Default
