típushibák, refaktorálás, kisebb hibák javítása

--- a/Editor/nbproject/project.properties
+++ b/Editor/nbproject/project.properties
@@ -1,9 +1,9 @@
-license.file=license.txt
+license.file=../license.txt
 #
 #Mon Oct 08 19:34:07 CEST 2018
 nbm.homepage=https://github.com/racz16/GLSL-editor
 nbm.module.author=Zal\u00e1n R\u00e1cz
-javac.compilerargs=-Xlint -Xlint\:-serial
+javac.compilerargs=-Xlint -Xlint:-serial
 keystore=nbproject/private/GlslEditor
 nbm_alias=GlslEditorAlias
 javac.source=1.7
