típushibák ellenőrzése, hibajavítások

--- a/AntlrLibraryWrapper4.7.1/src/hu/racz/zalan/antlr/Bundle.properties
+++ b/AntlrLibraryWrapper4.7.1/src/hu/racz/zalan/antlr/Bundle.properties
@@ -1,1 +1,3 @@
+OpenIDE-Module-Display-Category=Antlr
 OpenIDE-Module-Name=Antlr 4.7.1 Runtime
+OpenIDE-Module-Short-Description=Antlr 4.7.1 Runtime library wrapper
