--- a/AntlrLibraryWrapper4.7.1/nbproject/project.properties
+++ b/AntlrLibraryWrapper4.7.1/nbproject/project.properties
@@ -1,1 +1,6 @@
 is.autoload=true
+javac.compilerargs=-Xlint -Xlint:-serial
+javac.source=1.5
+license.file=../license.txt
+nbm.homepage=https://github.com/racz16/GLSL-editor
+nbm.module.author=Zal\u00e1n R\u00e1cz
