--- a/Editor/src/hu/racz/zalan/editor/Bundle.properties
+++ b/Editor/src/hu/racz/zalan/editor/Bundle.properties
@@ -2,7 +2,7 @@ OpenIDE-Module-Name=GLSL Editor
 OpenIDE-Module-Short-Description=GLSL Editor plugin for Netbeans.
 OpenIDE-Module-Long-Description=\
     GLSL Editor plugin for Netbeans. \
-    Features: syntax highlighting, error displaying, code completion, brace matching, indentation, formatting, go to definition, marking occurrences, adding new file.
+    Features: syntax highlighting, syntax errors, code completion, brace matching, indentation, formatting, go to definition, marking occurrences, code folding, adding new file.
 OpenIDE-Module-Display-Category=OpenGL
 text/x-glsl=GLSL
 default=Default
